runtime/core/dn2cpp_core.h

// ThrowHelper trap intrinsics. The BCL's System.ThrowHelper dead-throw closures
// (Span<T> bounds checks, Slice argument checks, …) are intrinsic-mapped to
// these, which raise a catchable managed exception of the matching type without
// pulling the large exception-construction IL into the program.
// Slow path behind the generated static-constructor first-use guards
// (X__ensure): run `body` exactly once across threads, with a release store on
// `flag` that pairs with the guard's inline acquire-load fast path. A thread
// racing an in-flight init blocks until it completes; a re-entrant call from
// the initializing thread itself returns immediately (recursive-cctor
// semantics — it observes the partially-initialized statics, like real .NET).
// A throwing body does NOT mark the flag: the failure is recorded against the flag's
// address and every later call re-raises that same managed exception, so a
// half-initialized type is never read as ready and the cctor is never retried (.NET's
// rule; it caches a TypeInitializationException, which dn2cpp does not model).
// `body` is null for a tree-shaken cctor (the guard then only latches the flag).
void dn2cpp_cctor_run_once(std::atomic<int8_t>* flag, void (*body)());
// One entry of the generated eager startup cctor pass: calls the type's
// __ensure and swallows a managed failure, which dn2cpp_cctor_run_once has
// already recorded for the first real use of the type to re-raise. Eager
// initialization is dn2cpp's stand-in for .NET's lazy one, so it must not
// terminate a program over a type .NET would never have initialized.
// `type` is the declaring type's reflection name, baked by the emitter beside the
// pointer (never null): a swallowed failure is REPORTED, and a report that cannot name
// the type whose initializer failed names a class of bug rather than a bug.
void dn2cpp_cctor_run_startup(void (*ensure)(), const char* type);
// ---- Task.Run / ThreadPool (real worker pool, bridged to the cooperative scheduler) ----
// Each submits the delegate to a fixed pool of GC-registered worker threads and returns
// a Task the worker completes; an awaiting cooperative thread is woken via the bridge
// (Dn2CppCont.owner). The result kind selects how the worker's return value is packed.
struct Dn2CppTask; // full definition below
// System.Net.Http transport (dn2cpp_http2_stream.cpp — libcurl over Mbed TLS,
// DN2CPP_USE_CURL; http:// and https:// alike): the streaming call family
// (dn2cpp_http2_call_*), the route EVERY managed request takes, so that a caller
// returns at the response HEADER block (HttpCompletionOption.ResponseHeadersRead)
// and a cancel reaches the transfer through abort()'s curl_multi_wakeup rather
// than waiting out a poll interval.
//
// The calls never throw — a null/empty url or a transport failure (DNS/TCP refused,
// timeout, unverifiable TLS certificate) is a failed call whose error() names the
// cause, the shape HttpClient reports *before* EnsureSuccessStatusCode(); an HTTP
// response, even 404/500, signals headers-ready with that status. Every pointer an
// accessor hands back is owned by the handle and valid only until free().
//
// HTTP version selection: httpVersion is Major*10+Minor (0 = unset = HTTP/1.1,
// matching real .NET's request default), versionPolicy the System.Net.HttpVersionPolicy
// value (0 RequestVersionOrLower, 1 Exact, 2 OrHigher). The 1.x rows always pin
// CURLOPT_HTTP_VERSION explicitly — with nghttp2 linked curl's own default is
// attempt-h2-over-TLS, and the transport must not change protocol under a request that
// never asked. HTTP/2 negotiates per policy (ALPN over https, prior knowledge over
// cleartext http); a policy the negotiated protocol cannot satisfy is a TRANSPORT
// failure naming both sides, and HTTP/3 is refused the same way. http_version()
// reports the NEGOTIATED protocol (10/11/20, 0 unknown), which the managed side must
// surface as HttpResponseMessage.Version — grpc-dotnet rejects anything but 2.0.
//
// Trailers are collected SEPARATELY from headers and never folded into the header
// list: gRPC reads grpc-status from the trailer section, and a grpc-status among the
// HEADERS means a trailers-only response, so merging the two would change what a
// response says. Nothing is synthesized when there are no trailers.
//
// Requires DN2CPP_USE_CURL (the default): with -DDN2CPP_USE_CURL=OFF these symbols are
// undefined and the link fails loudly, as with the zlib/brotli surfaces. Emscripten is
// the exception, not a softening — a browser has no TCP socket layer, so the option is
// forced off and dn2cpp_http2_stream.cpp's fallback arm defines this whole surface with
// every call failing with an error naming the platform. "You declined the transport"
// and "this target cannot have one" are different questions; only the first is a link
// error.
//
// TLS: peer and hostname verification are ON and cannot be turned off through this
// surface. The trust anchors are the Mozilla bundle COMPILED INTO the binary (Mbed TLS
// reads no OS trust store), overridable per process with DN2CPP_HTTP_CAINFO=<pem path>,
// which swaps the anchor set and never the verification.
//
// A plain C ABI on purpose: the DnHttp managed shim binds it with
// [DllImport("dn2cpp_http")], which resolves by NAME, so the entry points must be
// UNMANGLED C symbols taking the shapes dn2cpp's P/Invoke marshalling emits — string ->
// UTF-8 char*, string[] -> char**, byte[] -> element pointer, out int -> int* — never a
// raw Dn2CppString*/Dn2CppArray*. Dropping the extern "C" mangles the symbols and the
// shim's [DllImport] cannot bind.
//
// One opaque handle per call. open() starts the transfer, handed to the ONE
// process-wide transport thread whose single multi handle is what lets concurrent calls
// MULTIPLEX one h2 connection. bodyMode 0 is bodyless; 2 arms an unknown-length
// incremental upload (h2 DATA frames, chunked over HTTP/1.1) fed by
// write()/finish_send(); 1 hands the WHOLE body over here, going out through
// CURLOPT_POSTFIELDS — Content-Length rather than chunked, and rewindable so a redirect
// can re-send it, neither of which the incremental route can do.
//
// The two pool seconds are SocketsHttpHandler's connection-lifetime knobs applied per
// easy handle (0 = no limit, how Timeout.InfiniteTimeSpan crosses). The two structural
// pool knobs are HONORED, not merely reported: maxConnsPerServer (0 = unlimited) caps
// CONCURRENT connections per host and transfers past it queue, as real .NET queues past
// MaxConnectionsPerServer; multipleH2 == 0 (EnableMultipleHttp2Connections's default)
// makes an h2-capable request wait for the connection already being established and
// multiplex onto it. The cap's one approximation is scope — per process, not per
// handler.
//
// write() never blocks and never takes a chunk partially: 0 = the call already
// failed/finished, 1 = taken, 2 = taken and the send queue is at its bound, so the
// caller must not write again until await_send_drain() answers (1 writable, 0 call
// ended). That wait blocks, so it belongs on a pool worker — it is what turns a full
// queue into a pending Task instead of a stalled scheduler thread. Bounds:
// DN2CPP_HTTP_SEND_HIGH_WATER (default 1 MiB, above any gRPC message so a
// message-sized writer never parks) and DN2CPP_HTTP_RECV_HIGH_WATER (default 4 MiB,
// past which delivery pauses until read() drains); DN2CPP_HTTP_SEND_STATS=1 reports
// park count and peak backlog at free.
//
// wait_headers() blocks until the response header block is complete (1) or the
// transport failed (0 — a version policy the negotiated protocol cannot satisfy fails
// HERE, before any body). read() blocks for the next body bytes (>0), EOS (0 — trailers
// are final from then on), or a mid-stream failure (-1; buffered bytes drain first, so
// the stream breaks where the transfer did); cap == 0 is the zero-byte availability
// probe, which consumes nothing and answers 0 only when the call failed — only a SIZED
// read's 0 means EOS. abort() releases every blocked caller and stops the transfer;
// free() aborts, joins and releases, and the caller must serialize it against in-flight
// calls on the same handle (the DnHttp wrapper refcounts).
struct Dn2CppHttp2Call; // opaque; real def is private to dn2cpp_http2_stream.cpp
Dn2CppHttp2Call* dn2cpp_http2_call_open(
    const char* method, const char* url,
    const char* const* headers, int32_t headerCount,
    int32_t bodyMode,        // 0 none, 1 complete (body/bodyLen), 2 incremental (write())
    const uint8_t* body,     // read only under bodyMode 1
    int32_t bodyLen,         // length of `body` under bodyMode 1
    int32_t httpVersion, int32_t versionPolicy,
    int32_t maxIdleSeconds,      // SocketsHttpHandler.PooledConnectionIdleTimeout, 0 = none
    int32_t maxLifetimeSeconds,  // SocketsHttpHandler.PooledConnectionLifetime, 0 = none
    int32_t maxConnsPerServer,   // SocketsHttpHandler.MaxConnectionsPerServer, 0 = unlimited
    int32_t multipleH2);         // SocketsHttpHandler.EnableMultipleHttp2Connections (0/1)
int32_t     dn2cpp_http2_call_write(Dn2CppHttp2Call* c, const uint8_t* buf, int32_t len);
int32_t     dn2cpp_http2_call_await_send_drain(Dn2CppHttp2Call* c); // blocks; pool worker only
void        dn2cpp_http2_call_finish_send(Dn2CppHttp2Call* c);
int32_t     dn2cpp_http2_call_wait_headers(Dn2CppHttp2Call* c);
int32_t     dn2cpp_http2_call_status(Dn2CppHttp2Call* c);
int32_t     dn2cpp_http2_call_http_version(Dn2CppHttp2Call* c); // negotiated 10/11/20; 0 unknown
const char* dn2cpp_http2_call_reason(Dn2CppHttp2Call* c);       // owned by handle
const char* dn2cpp_http2_call_error(Dn2CppHttp2Call* c);        // nullptr when not failed
int32_t     dn2cpp_http2_call_header_count(Dn2CppHttp2Call* c);
const char* dn2cpp_http2_call_header_name(Dn2CppHttp2Call* c, int32_t index);
const char* dn2cpp_http2_call_header_value(Dn2CppHttp2Call* c, int32_t index);
int32_t     dn2cpp_http2_call_read(Dn2CppHttp2Call* c, uint8_t* buf, int32_t cap);
int32_t     dn2cpp_http2_call_trailer_count(Dn2CppHttp2Call* c);
const char* dn2cpp_http2_call_trailer_name(Dn2CppHttp2Call* c, int32_t index);
const char* dn2cpp_http2_call_trailer_value(Dn2CppHttp2Call* c, int32_t index);
void        dn2cpp_http2_call_abort(Dn2CppHttp2Call* c);
void        dn2cpp_http2_call_free(Dn2CppHttp2Call* c);
// Register a resumption to run when `t` completes (the suspension path). If `t`
// is already complete the resumption is posted immediately.
void dn2cpp_task_on_completed(Dn2CppTask* t, void (*fn)(void*), void* state);
// Enqueue a resumption on the cooperative run queue.
void dn2cpp_sched_post(void (*fn)(void*), void* state);